fix: wrap long text

--- a/public/styles.css
+++ b/public/styles.css
@@ -73,6 +73,10 @@ h1 {
     margin-left: 10px;
 }
 
+.bookmark-info {
+    max-width: calc(100% - 40px);
+}
+
 .bookmark-url {
     color: #0000ee;
     font-size: 10pt;
